# cooperative_control

./: README.md  debug.txt  多车调试.md  稳定循迹记录.md  调车手册.md
communication/: CMakeLists.txt  README.md  package.xml
communication/launch/: communication.launch
communication/msg/: AttackRequest.msg  ExecInfoRequest.msg  Task.msg  TaskEI.msg  TaskPos.msg  TasksRequest.msg
communication/src/: DtoC_server.py  Situ.py  Traj_Plan.proto  Traj_Plan_pb2.py  Traj_Plan_pb2_grpc.py  adm2ctrl.proto  adm2ctrl_pb2.py  adm2ctrl_pb2_grpc.py  adm2vis.proto  adm_replay.py  coreserver_datatest.py  ctrl_server.py  ctrlserver_datatest.py  data_transf.proto  data_transf_pb2.py  gps_client.py  gps_server.py  gps_situ.py  gps_test_server.py  pub_road_points.py  pub_txt_road_points.py  pure_pursuit.py  traj_plan_client.py  traj_plan_server.py  turtlebot3_teleop_tb1.py  turtlebot3_teleop_trace.py  决策-控制数据协议0803.docx
communication/src/backup/: data_transf_pb2.py  data_transf_pb2_grpc.py
gnss_gpchc_driver/: CMakeLists.txt  README.md  UM482.yaml  package.xml  sino_m900.yaml
gnss_gpchc_driver/launch/: gnss_driver.launch
gnss_gpchc_driver/map/: boundary_lat_lon.txt  boundary_xy_sinognss.txt  plotRawMap.py  rawMap0406_1423.txt  rawMap_lzjSouth.txt  roadMap0401_2125.txt  roadMap0406_1423.txt  roadMap0406_1513.txt  roadMap0406_1527.txt  roadMap0406_1544.txt  roadMap0406_1553.txt  roadMap0406_1711.txt  roadMap0406_1716.txt  roadMap_lzjSouth1.txt
gnss_gpchc_driver/src/: GPS_Subscribe_Right.cpp  GPS_Subscriber_GPCHC.cpp  GPS_Subscriber_GPYBM.cpp  GPS_Subscriber_Right.cpp  GPS_Subscriber_scout.cpp  gauss_transfer.py  gnss_transfer.cpp  main.cpp  main_backup.cpp
gnss_gpchc_driver/utils/: listener.py
trajectory_tracking/: CMakeLists.txt  README.md  package.xml  pure_pursuit_python.launch  pure_pursuit_simulation.launch  pure_trajectory_tracking.launch  trajectory_tracking.launch
trajectory_tracking/msg/: RoadPoint.msg  Trajectory.msg
trajectory_tracking/routes/: scene_1_vel_2_0.txt  scene_1_vel_2_1.txt  scene_1_vel_2_2.txt  scene_1_vel_2_3.txt  scene_1_vel_2_4.txt  scene_1_vel_2_5.txt  scene_1_vel_2_6.txt  scene_1_vel_3_0.txt  scene_1_vel_3_1.txt  scene_1_vel_3_2.txt  scene_1_vel_3_3.txt  scene_1_vel_3_4.txt  scene_1_vel_3_5.txt  scene_1_vel_3_6.txt  scene_2_vel_2_0.txt  scene_2_vel_2_1.txt  scene_2_vel_2_2.txt  scene_2_vel_2_3.txt  scene_2_vel_2_4.txt  scene_2_vel_2_5.txt  scene_2_vel_2_6.txt  scene_2_vel_3_0.txt  scene_2_vel_3_1.txt  scene_2_vel_3_2.txt  scene_2_vel_3_3.txt  scene_2_vel_3_4.txt  scene_2_vel_3_5.txt  scene_2_vel_3_6.txt  scene_7_vel_0dot5_0.txt  scene_7_vel_2_0.txt  scene_7_vel_2_1.txt  scene_7_vel_2_2.txt  scene_7_vel_2_3.txt  scene_7_vel_2_4.txt  scene_7_vel_2_5.txt  scene_7_vel_2_6.txt  scene_7_vel_3_0.txt  scene_7_vel_3_1.txt  scene_7_vel_3_2.txt  scene_7_vel_3_3.txt  (+3 more)
trajectory_tracking/src/: 1.txt  2021-07-30-17-21-45.bag  ana.py  centerline_south.txt  keyboard.py  line_result.txt  line_test_meiyuan.txt  pint_ex.txt  pub_txt_road_points.py  pure_pursuit.py  pure_pursuit_dc.py  pure_pursuit_gazebo.py  pure_pursuit_keyboard.py  pure_pursuit_long.py  record.py  shuangyixian.txt  shuangyixian2.txt  shuangyixian_result.txt  shuangyixian_result2.txt  straight.txt
trajectory_tracking/src/roadmap/: road1_vel_1.txt  road1_vel_2.txt  road1_vel_3.txt  road1_vel_4.txt  road1_vel_5.txt  road1_vel_6.txt  road2_vel_1.txt  road2_vel_2.txt  road2_vel_3.txt  road2_vel_4.txt  road2_vel_5.txt  (+11 more)
(+128 files in other folders)
